<resources>
    <string name="app_name">Star Wars</string>
    <string name="john_wick">JOHN WICK</string>
    <string name="keanu_reeves">Keanu Reeves</string>
    <string name="john_wick_3">John Wick 3</string>
    <string name="crime">Crime</string>
    <string name="_2hr_10m_r">2hr 10m | R</string>
    <string name="john_wick_3_parabellum">John Wick 3: Parabellum</string>
    <string name="action_crime_thriller">Action, Crime, Thriller</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="view_all">View All</string>
    <string name="in_this_third_installment_of_the_adrenaline_fueled_action_franchise_super_assassin_john_wick_returns_with_a_14_million_price_tag_on_his_head_and_an_army_of_bounty_hunting_show_more">In this third installment of the adrenaline-fueled action franchise, super-assassin John Wick returns with a $14 million price tag on his head and an army of bounty-hunting... Show More</string>
    <string name="lorem_ipsum">"There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. "</string>
</resources>