<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<ScrollView
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        android:orientation="vertical"
        tools:context=".view.MovieDetailsActivity">


        <ImageView
            android:id="@+id/mainPosterIv"
            android:layout_width="145dp"
            android:layout_height="185dp"
            android:layout_marginStart="122dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="122dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/johnwick" />

        <TextView
            android:id="@+id/moviewNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/john_wick_3_parabellum"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainPosterIv" />

        <TextView
            android:id="@+id/moviewDurationTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/_2hr_10m_r"
            android:textColor="#93989F"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviewNameTv" />

        <TextView
            android:id="@+id/moviewGenreTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/action_crime_thriller"
            android:textColor="#93989F"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviewDurationTv" />

        <TextView
            android:id="@+id/sinopsisTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/sinopsis"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviewGenreTv" />

        <TextView
            android:id="@+id/sinopsinTextTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/in_this_third_installment_of_the_adrenaline_fueled_action_franchise_super_assassin_john_wick_returns_with_a_14_million_price_tag_on_his_head_and_an_army_of_bounty_hunting_show_more"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:ellipsize="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sinopsisTv" />

        <TextView
            android:id="@+id/castAndCrewTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:gravity="start"
            android:text="@string/cast_crew"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/viewAllTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sinopsinTextTv" />

        <TextView
            android:id="@+id/viewAllTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/view_all"
            android:textColor="#47CFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/castAndCrewTv"
            app:layout_constraintTop_toBottomOf="@+id/sinopsinTextTv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moviewDerailsReciclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="113dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castAndCrewTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>